muda color da tag a na pagina sobre

--- a/html/ex2/style/sobre.css
+++ b/html/ex2/style/sobre.css
@@ -59,6 +59,10 @@ nav a, small {
   color: #666;
 }
 
+.sobre a {
+  color: #666;
+}
+
 footer ul a, footer li, footer address {
   color: white;
 }
